# light_compressor

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  python-package.yml  run_tests.yml
src/light_compressor/: __init__.py  compression_method.py  compressor_method.py  openers.pxd  openers.pyi  openers.pyx  reader.py  types.py  writer.py
src/light_compressor/common/: __init__.py  levels.py  methods.py  types.py
src/light_compressor/compressors/: __init__.py  gzip.pxd  gzip.pyi  gzip.pyx  lz4.pxd  lz4.pyi  lz4.pyx  snappy.pyi  zstd.pyi  zstd.pyx
src/light_compressor/compressors/snappy/: Cargo.toml
src/light_compressor/compressors/snappy/src/: lib.rs
src/light_compressor/decompressors/: __init__.py  decompress_reader.py  decompressor.pxd  decompressor.pyi  decompressor.pyx  gzip.pxd  gzip.pyi  gzip.pyx  lz4.pyi  lz4.pyx  reader.pxd  reader.pyi  reader.pyx  snappy.pyi  zstd.pyi  zstd.pyx
src/light_compressor/decompressors/snappy/: Cargo.toml
src/light_compressor/decompressors/snappy/src/: lib.rs
tests/: test_all.py  test_gzip.py  test_lz4.py  test_reader.py  test_snappy.py  test_zstd.py
