[build-system]
requires = ["setuptools", "setuptools-rust", "wheel", "Cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "light_compressor"
version = "0.1.1.dev2"
description = "Library for read compressed stream and write compressed chunks."
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [
    {name = "0xMihalich", email = "bayanmobile87@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cffi>=1.17.1",
    "lz4>=4.4.3",
    "zstandard>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/dns-technologies/light_compressor"
Documentation = "https://dns-technologies.github.io/dbhose_airflow/base_modules/light_compressor/index.html"
Repository = "https://github.com/dns-technologies/light_compressor"
Changelog = "https://github.com/dns-technologies/light_compressor/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
light_compressor = ["*.pyd", "*.md", "*.txt"]
